TT-870 generate request ID
- replace 'secure-token' with request ID that is passed back in the
Response to an AuthnRequest
- changed the TranslateSAMLResponse endpoint to expect a requestID in
the body of the request
- also: changed dto's to use private members and getters

Authors: @amritsidhu @sgreensmith @IreneLau-GDS
