# src/main/java/uk/gov/ida/verifyserviceprovider/dto/RequestResponseBody.java
@@ -7,16 +7,28 @@ import java.net.URI;
 
 public class RequestResponseBody {
 
-    public final String samlRequest;
-    public final String secureToken;
-    public final URI location;
+    private final String samlRequest;
+    private final String requestId;
+    private final URI location;
 
     @JsonCreator
     public RequestResponseBody(@JsonProperty("samlRequest") String samlRequest,
-                               @JsonProperty("secureToken") String secureToken,
+                               @JsonProperty("requestId") String requestId,
                                @JsonProperty("location") URI location) {
         this.samlRequest = samlRequest;
-        this.secureToken = secureToken;
+        this.requestId = requestId;
         this.location = location;
+    }
+
+    public String getSamlRequest() {
+        return samlRequest;
+    }
+
+    public String getRequestId() {
+        return requestId;
+    }
+
+    public URI getLocation() {
+        return location;
     }
 }
